BoardController수정